Safari search input alignment, fixes #165

--- a/src/scss/views/_search.scss
+++ b/src/scss/views/_search.scss
@@ -18,6 +18,12 @@
 			border-bottom: 2px solid transparent;
 			border-radius: 0;
 
+			/* handle Safari's ridiculous non-vertical centering */
+			&:not(:root:root) {
+				height: 4rem;
+				margin-top: -1rem;
+			}
+
 			&:focus,
 			&:active {
 				border-color: $turquoise;
